// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Color Parser HSLA clamps alpha values between either 0 and 1 or 0% and 100% 1`] = `
Object {
  "alpha": Object {
    "alpha": Object {
      "percentage": 0,
      "stringify": [Function],
    },
  },
  "hue": 90,
  "lightness": Object {
    "percentage": 0,
    "stringify": [Function],
  },
  "saturation": Object {
    "percentage": 100,
    "stringify": [Function],
  },
  "tag": "hsla",
}
`;

exports[`Color Parser HSLA clamps alpha values between either 0 and 1 or 0% and 100% 2`] = `
Object {
  "alpha": Object {
    "alpha": Object {
      "percentage": 100,
      "stringify": [Function],
    },
  },
  "hue": 90,
  "lightness": Object {
    "percentage": 0,
    "stringify": [Function],
  },
  "saturation": Object {
    "percentage": 100,
    "stringify": [Function],
  },
  "tag": "hsla",
}
`;

exports[`Color Parser HSLA clamps alpha values between either 0 and 1 or 0% and 100% 3`] = `
Object {
  "alpha": Object {
    "alpha": 0,
  },
  "hue": 90,
  "lightness": Object {
    "percentage": 0,
    "stringify": [Function],
  },
  "saturation": Object {
    "percentage": 100,
    "stringify": [Function],
  },
  "tag": "hsla",
}
`;

exports[`Color Parser HSLA clamps alpha values between either 0 and 1 or 0% and 100% 4`] = `
Object {
  "alpha": Object {
    "alpha": 1,
  },
  "hue": 90,
  "lightness": Object {
    "percentage": 0,
    "stringify": [Function],
  },
  "saturation": Object {
    "percentage": 100,
    "stringify": [Function],
  },
  "tag": "hsla",
}
`;

exports[`Color Parser HSLA clamps lightness between 0% and 100% 1`] = `
Object {
  "alpha": Object {
    "alpha": Object {
      "percentage": 100,
      "stringify": [Function],
    },
  },
  "hue": 90,
  "lightness": Object {
    "percentage": 0,
    "stringify": [Function],
  },
  "saturation": Object {
    "percentage": 100,
    "stringify": [Function],
  },
  "tag": "hsla",
}
`;

exports[`Color Parser HSLA clamps lightness between 0% and 100% 2`] = `
Object {
  "alpha": Object {
    "alpha": Object {
      "percentage": 100,
      "stringify": [Function],
    },
  },
  "hue": 90,
  "lightness": Object {
    "percentage": 100,
    "stringify": [Function],
  },
  "saturation": Object {
    "percentage": 100,
    "stringify": [Function],
  },
  "tag": "hsla",
}
`;

exports[`Color Parser HSLA clamps saturation between 0% and 100% 1`] = `
Object {
  "alpha": Object {
    "alpha": Object {
      "percentage": 100,
      "stringify": [Function],
    },
  },
  "hue": 90,
  "lightness": Object {
    "percentage": 100,
    "stringify": [Function],
  },
  "saturation": Object {
    "percentage": 0,
    "stringify": [Function],
  },
  "tag": "hsla",
}
`;

exports[`Color Parser HSLA clamps saturation between 0% and 100% 2`] = `
Object {
  "alpha": Object {
    "alpha": Object {
      "percentage": 100,
      "stringify": [Function],
    },
  },
  "hue": 90,
  "lightness": Object {
    "percentage": 100,
    "stringify": [Function],
  },
  "saturation": Object {
    "percentage": 100,
    "stringify": [Function],
  },
  "tag": "hsla",
}
`;

exports[`Color Parser HSLA parses hsla values without an alpha value 1`] = `
Object {
  "alpha": Object {
    "alpha": 1,
  },
  "hue": 0,
  "lightness": Object {
    "percentage": 100,
    "stringify": [Function],
  },
  "saturation": Object {
    "percentage": 0,
    "stringify": [Function],
  },
  "tag": "hsla",
}
`;

exports[`Color Parser HSLA parses hsla values without an alpha value 2`] = `
Object {
  "alpha": Object {
    "alpha": 1,
  },
  "hue": 90,
  "lightness": Object {
    "percentage": 100,
    "stringify": [Function],
  },
  "saturation": Object {
    "percentage": 0,
    "stringify": [Function],
  },
  "tag": "hsla",
}
`;

exports[`Color Parser HSLA parses hsla values without an alpha value 3`] = `
Object {
  "alpha": Object {
    "alpha": 1,
  },
  "hue": 0,
  "lightness": Object {
    "percentage": 100,
    "stringify": [Function],
  },
  "saturation": Object {
    "percentage": 0,
    "stringify": [Function],
  },
  "tag": "hsla",
}
`;

exports[`Color Parser HSLA parses hsla values without an alpha value 4`] = `
Object {
  "alpha": Object {
    "alpha": 1,
  },
  "hue": 90,
  "lightness": Object {
    "percentage": 100,
    "stringify": [Function],
  },
  "saturation": Object {
    "percentage": 0,
    "stringify": [Function],
  },
  "tag": "hsla",
}
`;

exports[`Color Parser HSLA parses hsla values without an alpha value 5`] = `
Object {
  "alpha": Object {
    "alpha": 1,
  },
  "hue": 0,
  "lightness": Object {
    "percentage": 100,
    "stringify": [Function],
  },
  "saturation": Object {
    "percentage": 0,
    "stringify": [Function],
  },
  "tag": "hsla",
}
`;

exports[`Color Parser HSLA parses hsla values without an alpha value 6`] = `
Object {
  "alpha": Object {
    "alpha": 1,
  },
  "hue": 90,
  "lightness": Object {
    "percentage": 100,
    "stringify": [Function],
  },
  "saturation": Object {
    "percentage": 0,
    "stringify": [Function],
  },
  "tag": "hsla",
}
`;

exports[`Color Parser HSLA parses hsla values without an alpha value 7`] = `
Object {
  "alpha": Object {
    "alpha": Object {
      "percentage": 100,
      "stringify": [Function],
    },
  },
  "hue": 0,
  "lightness": Object {
    "percentage": 100,
    "stringify": [Function],
  },
  "saturation": Object {
    "percentage": 0,
    "stringify": [Function],
  },
  "tag": "hsla",
}
`;

exports[`Color Parser HSLA parses hsla values without an alpha value 8`] = `
Object {
  "alpha": Object {
    "alpha": Object {
      "percentage": 100,
      "stringify": [Function],
    },
  },
  "hue": 90,
  "lightness": Object {
    "percentage": 100,
    "stringify": [Function],
  },
  "saturation": Object {
    "percentage": 0,
    "stringify": [Function],
  },
  "tag": "hsla",
}
`;

exports[`Color Parser HSLA parses hsla values without an alpha value 9`] = `
Object {
  "alpha": Object {
    "alpha": 0.5,
  },
  "hue": 90,
  "lightness": Object {
    "percentage": 100,
    "stringify": [Function],
  },
  "saturation": Object {
    "percentage": 0,
    "stringify": [Function],
  },
  "tag": "hsla",
}
`;

exports[`Color Parser HSLA parses hsla values without an alpha value 10`] = `
Object {
  "alpha": Object {
    "alpha": Object {
      "percentage": 50,
      "stringify": [Function],
    },
  },
  "hue": 90,
  "lightness": Object {
    "percentage": 100,
    "stringify": [Function],
  },
  "saturation": Object {
    "percentage": 0,
    "stringify": [Function],
  },
  "tag": "hsla",
}
`;

exports[`Color Parser HSLA produces parse errors for missing hue, saturation & ligthness values 1`] = `
Object {
  "message": "hsla() seems to be a malformed hsla() value",
  "token": "hsla()",
}
`;

exports[`Color Parser HSLA produces parse errors when alpha is neither a number nor percentage 1`] = `
Object {
  "message": "The alpha value(fourth argument) in hsla() should be either a  number or a percentage",
  "token": "hsla(90, 0%, 100%, hex)",
}
`;

exports[`Color Parser HSLA produces parse errors when hue value is not a number 1`] = `
Object {
  "message": "In hsla() the hue (first argument) should be a number",
  "token": "hsla(0%, 0%, 100%, 100%)",
}
`;

exports[`Color Parser HSLA produces parse errors when lightness is not a percentage 1`] = `
Object {
  "message": "In hsla() the ligthness (third argument) should always be a percentage",
  "token": "hsla(90, 0%, 100, 100%)",
}
`;

exports[`Color Parser HSLA produces parse errors when saturation is not a percentage 1`] = `
Object {
  "message": "In hsla() the saturation (second argument) should always be a percentage",
  "token": "hsla(90, 0, 100%, 100%)",
}
`;

exports[`Color Parser Hex colors parses hex values corresponding to every named color keyword 1`] = `
"{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#F0F8FF\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FAEBD7\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#00FFFF\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#7FFFD4\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#F0FFFF\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#F5F5DC\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFE4C4\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#000000\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFEBCD\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#0000FF\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#8A2BE2\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#A52A2A\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#DEB887\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#5F9EA0\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#7FFF00\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#D2691E\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FF7F50\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#6495ED\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFF8DC\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#DC143C\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#00FFFF\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#00008B\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#008B8B\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#B8860B\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#A9A9A9\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#006400\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#A9A9A9\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#BDB76B\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#8B008B\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#556B2F\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FF8C00\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#9932CC\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#8B0000\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#E9967A\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#8FBC8F\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#483D8B\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#2F4F4F\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#2F4F4F\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#00CED1\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#9400D3\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FF1493\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#00BFFF\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#696969\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#696969\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#1E90FF\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#B22222\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFFAF0\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#228B22\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FF00FF\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#DCDCDC\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#F8F8FF\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFD700\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#DAA520\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#808080\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#008000\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#ADFF2F\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#808080\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#F0FFF0\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FF69B4\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#CD5C5C\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#4B0082\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFFFF0\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#F0E68C\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#E6E6FA\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFF0F5\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#7CFC00\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFFACD\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#ADD8E6\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#F08080\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#E0FFFF\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FAFAD2\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#D3D3D3\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#90EE90\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#D3D3D3\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFB6C1\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFA07A\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#20B2AA\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#87CEFA\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#778899\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#778899\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#B0C4DE\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFFFE0\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#00FF00\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#32CD32\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FAF0E6\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FF00FF\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#800000\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#66CDAA\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#0000CD\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#BA55D3\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#9370DB\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#3CB371\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#7B68EE\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#00FA9A\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#48D1CC\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#C71585\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#191970\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#F5FFFA\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFE4E1\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFE4B5\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFDEAD\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#000080\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FDF5E6\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#808000\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#6B8E23\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFA500\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FF4500\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#DA70D6\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#EEE8AA\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#98FB98\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#AFEEEE\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#DB7093\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFEFD5\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFDAB9\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#CD853F\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFC0CB\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#DDA0DD\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#B0E0E6\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#800080\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#663399\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FF0000\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#BC8F8F\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#4169E1\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#8B4513\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FA8072\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#F4A460\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#2E8B57\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFF5EE\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#A0522D\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#C0C0C0\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#87CEEB\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#6A5ACD\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#708090\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#708090\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFFAFA\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#00FF7F\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#4682B4\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#D2B48C\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#008080\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#D8BFD8\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FF6347\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#40E0D0\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#EE82EE\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#F5DEB3\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFFFFF\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#F5F5F5\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#FFFF00\\"}
{\\"tag\\":\\"hex-color\\",\\"hex\\":\\"#9ACD32\\"}"
`;

exports[`Color Parser Hex colors parses hex values of size 8, 6, 4 & 3 1`] = `
Object {
  "hex": "#4682B4FF",
  "tag": "hex-color",
}
`;

exports[`Color Parser Hex colors parses hex values of size 8, 6, 4 & 3 2`] = `
Object {
  "hex": "#4682B4",
  "tag": "hex-color",
}
`;

exports[`Color Parser Hex colors parses hex values of size 8, 6, 4 & 3 3`] = `
Object {
  "hex": "#4682",
  "tag": "hex-color",
}
`;

exports[`Color Parser Hex colors parses hex values of size 8, 6, 4 & 3 4`] = `
Object {
  "hex": "#468",
  "tag": "hex-color",
}
`;

exports[`Color Parser Hex colors produces a parse error for invalid hex values 1`] = `
Object {
  "message": "#46:  is not a supported color format.
The supported formats are: hex, named  color keywords, rgb(), rgba(), hsl() and hsla().",
  "token": "#46",
}
`;

exports[`Color Parser Hex colors produces a parse error for invalid hex values 2`] = `
Object {
  "message": "#4682B4FF00:  is not a supported color format.
The supported formats are: hex, named  color keywords, rgb(), rgba(), hsl() and hsla().",
  "token": "#4682B4FF00",
}
`;

exports[`Color Parser Hex colors produces a parse error for invalid hex values 3`] = `
Object {
  "message": "#xyz:  is not a supported color format.
The supported formats are: hex, named  color keywords, rgb(), rgba(), hsl() and hsla().",
  "token": "#xyz",
}
`;

exports[`Color Parser Named color keywords parses every named color keyword 1`] = `
"{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"aliceblue\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"antiquewhite\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"aqua\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"aquamarine\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"azure\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"beige\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"bisque\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"black\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"blanchedalmond\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"blue\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"blueviolet\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"brown\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"burlywood\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"cadetblue\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"chartreuse\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"chocolate\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"coral\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"cornflowerblue\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"cornsilk\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"crimson\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"cyan\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"darkblue\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"darkcyan\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"darkgoldenrod\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"darkgray\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"darkgreen\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"darkgrey\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"darkkhaki\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"darkmagenta\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"darkolivegreen\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"darkorange\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"darkorchid\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"darkred\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"darksalmon\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"darkseagreen\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"darkslateblue\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"darkslategray\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"darkslategrey\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"darkturquoise\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"darkviolet\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"deeppink\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"deepskyblue\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"dimgray\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"dimgrey\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"dodgerblue\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"firebrick\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"floralwhite\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"forestgreen\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"fuchsia\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"gainsboro\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"ghostwhite\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"gold\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"goldenrod\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"gray\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"green\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"greenyellow\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"grey\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"honeydew\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"hotpink\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"indianred\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"indigo\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"ivory\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"khaki\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"lavender\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"lavenderblush\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"lawngreen\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"lemonchiffon\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"lightblue\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"lightcoral\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"lightcyan\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"lightgoldenrodyellow\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"lightgray\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"lightgreen\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"lightgrey\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"lightpink\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"lightsalmon\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"lightseagreen\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"lightskyblue\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"lightslategray\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"lightslategrey\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"lightsteelblue\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"lightyellow\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"lime\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"limegreen\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"linen\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"magenta\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"maroon\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"mediumaquamarine\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"mediumblue\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"mediumorchid\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"mediumpurple\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"mediumseagreen\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"mediumslateblue\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"mediumspringgreen\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"mediumturquoise\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"mediumvioletred\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"midnightblue\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"mintcream\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"mistyrose\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"moccasin\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"navajowhite\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"navy\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"oldlace\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"olive\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"olivedrab\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"orange\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"orangered\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"orchid\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"palegoldenrod\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"palegreen\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"paleturquoise\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"palevioletred\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"papayawhip\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"peachpuff\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"peru\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"pink\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"plum\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"powderblue\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"purple\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"rebeccapurple\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"red\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"rosybrown\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"royalblue\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"saddlebrown\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"salmon\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"sandybrown\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"seagreen\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"seashell\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"sienna\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"silver\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"skyblue\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"slateblue\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"slategray\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"slategrey\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"snow\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"springgreen\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"steelblue\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"tan\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"teal\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"thistle\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"tomato\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"turquoise\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"violet\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"wheat\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"white\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"whitesmoke\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"yellow\\"}
{\\"tag\\":\\"named-color\\",\\"keyword\\":\\"yellowgreen\\"}"
`;

exports[`Color Parser Named color keywords produces a parse error for non-existent color keywords 1`] = `
Object {
  "message": "notarealcolorkeyword:  is not a supported color format.
The supported formats are: hex, named  color keywords, rgb(), rgba(), hsl() and hsla().",
  "token": "notarealcolorkeyword",
}
`;

exports[`Color Parser RGBA parsed rgba channel values are clamped between 0 and 255 1`] = `
Object {
  "alpha": Object {
    "alpha": 1,
  },
  "channels": Array [
    0,
    0,
    0,
  ],
  "tag": "rgba",
}
`;

exports[`Color Parser RGBA parsed rgba channel values are clamped between 0 and 255 2`] = `
Object {
  "alpha": Object {
    "alpha": 1,
  },
  "channels": Array [
    255,
    255,
    255,
  ],
  "tag": "rgba",
}
`;

exports[`Color Parser RGBA parsed rgba channel values are clamped between 0 and 255 3`] = `
Object {
  "alpha": Object {
    "alpha": 1,
  },
  "channels": Array [
    Object {
      "percentage": 0,
      "stringify": [Function],
    },
    Object {
      "percentage": 0,
      "stringify": [Function],
    },
    Object {
      "percentage": 0,
      "stringify": [Function],
    },
  ],
  "tag": "rgba",
}
`;

exports[`Color Parser RGBA parsed rgba channel values are clamped between 0 and 255 4`] = `
Object {
  "alpha": Object {
    "alpha": 1,
  },
  "channels": Array [
    Object {
      "percentage": 100,
      "stringify": [Function],
    },
    Object {
      "percentage": 100,
      "stringify": [Function],
    },
    Object {
      "percentage": 100,
      "stringify": [Function],
    },
  ],
  "tag": "rgba",
}
`;

exports[`Color Parser RGBA parses rgba alpha values are clamped between 0 and 1 1`] = `
Object {
  "alpha": Object {
    "alpha": 0,
  },
  "channels": Array [
    0,
    0,
    0,
  ],
  "tag": "rgba",
}
`;

exports[`Color Parser RGBA parses rgba alpha values are clamped between 0 and 1 2`] = `
Object {
  "alpha": Object {
    "alpha": 1,
  },
  "channels": Array [
    0,
    0,
    0,
  ],
  "tag": "rgba",
}
`;

exports[`Color Parser RGBA parses rgba alpha values are clamped between 0 and 1 3`] = `
Object {
  "alpha": Object {
    "alpha": Object {
      "percentage": 0,
      "stringify": [Function],
    },
  },
  "channels": Array [
    0,
    0,
    0,
  ],
  "tag": "rgba",
}
`;

exports[`Color Parser RGBA parses rgba alpha values are clamped between 0 and 1 4`] = `
Object {
  "alpha": Object {
    "alpha": Object {
      "percentage": 100,
      "stringify": [Function],
    },
  },
  "channels": Array [
    0,
    0,
    0,
  ],
  "tag": "rgba",
}
`;

exports[`Color Parser RGBA parses rgba values with an alpha value 1`] = `
Object {
  "alpha": Object {
    "alpha": 1,
  },
  "channels": Array [
    0,
    255,
    0,
  ],
  "tag": "rgba",
}
`;

exports[`Color Parser RGBA parses rgba values with an alpha value 2`] = `
Object {
  "alpha": Object {
    "alpha": Object {
      "percentage": 100,
      "stringify": [Function],
    },
  },
  "channels": Array [
    0,
    255,
    0,
  ],
  "tag": "rgba",
}
`;

exports[`Color Parser RGBA parses rgba values with an alpha value 3`] = `
Object {
  "alpha": Object {
    "alpha": 1,
  },
  "channels": Array [
    Object {
      "percentage": 0,
      "stringify": [Function],
    },
    Object {
      "percentage": 100,
      "stringify": [Function],
    },
    Object {
      "percentage": 0,
      "stringify": [Function],
    },
  ],
  "tag": "rgba",
}
`;

exports[`Color Parser RGBA parses rgba values with an alpha value 4`] = `
Object {
  "alpha": Object {
    "alpha": Object {
      "percentage": 100,
      "stringify": [Function],
    },
  },
  "channels": Array [
    Object {
      "percentage": 0,
      "stringify": [Function],
    },
    Object {
      "percentage": 100,
      "stringify": [Function],
    },
    Object {
      "percentage": 0,
      "stringify": [Function],
    },
  ],
  "tag": "rgba",
}
`;

exports[`Color Parser RGBA parses rgba values with an alpha value 5`] = `
Object {
  "alpha": Object {
    "alpha": Object {
      "percentage": 50,
      "stringify": [Function],
    },
  },
  "channels": Array [
    Object {
      "percentage": 0,
      "stringify": [Function],
    },
    Object {
      "percentage": 100,
      "stringify": [Function],
    },
    Object {
      "percentage": 0,
      "stringify": [Function],
    },
  ],
  "tag": "rgba",
}
`;

exports[`Color Parser RGBA parses rgba values with an alpha value 6`] = `
Object {
  "alpha": Object {
    "alpha": 0.5,
  },
  "channels": Array [
    0,
    255,
    0,
  ],
  "tag": "rgba",
}
`;

exports[`Color Parser RGBA parses rgba values without an alpha value 1`] = `
Object {
  "alpha": Object {
    "alpha": 1,
  },
  "channels": Array [
    0,
    255,
    0,
  ],
  "tag": "rgba",
}
`;

exports[`Color Parser RGBA parses rgba values without an alpha value 2`] = `
Object {
  "alpha": Object {
    "alpha": 1,
  },
  "channels": Array [
    0,
    255,
    0,
  ],
  "tag": "rgba",
}
`;

exports[`Color Parser RGBA parses rgba values without an alpha value 3`] = `
Object {
  "alpha": Object {
    "alpha": 1,
  },
  "channels": Array [
    Object {
      "percentage": 0,
      "stringify": [Function],
    },
    Object {
      "percentage": 100,
      "stringify": [Function],
    },
    Object {
      "percentage": 0,
      "stringify": [Function],
    },
  ],
  "tag": "rgba",
}
`;

exports[`Color Parser RGBA parses rgba values without an alpha value 4`] = `
Object {
  "alpha": Object {
    "alpha": 1,
  },
  "channels": Array [
    Object {
      "percentage": 0,
      "stringify": [Function],
    },
    Object {
      "percentage": 100,
      "stringify": [Function],
    },
    Object {
      "percentage": 0,
      "stringify": [Function],
    },
  ],
  "tag": "rgba",
}
`;

exports[`Color Parser RGBA produces parse errors for missing rgba channel values 1`] = `
Object {
  "message": "rgba() seems to be a malformed rgba() value",
  "token": "rgba()",
}
`;

exports[`Color Parser RGBA produces parse errors for rgba with incorrect number of arguments 1`] = `
Object {
  "message": "rgba(0%, 100, 0%, 100%, 1) seems to be an rgba() value. It should have exactly three arguments to specify the red, green & blue channels of the color respectively. A final optional argument specifies the alpha of the color.",
  "token": "rgba(0%, 100, 0%, 100%, 1)",
}
`;

exports[`Color Parser RGBA produces parse errors for rgba with incorrect number of arguments 2`] = `
Object {
  "message": "rgba(100%, 1) seems to be an rgba() value. It should have exactly three arguments to specify the red, green & blue channels of the color respectively. A final optional argument specifies the alpha of the color.",
  "token": "rgba(100%, 1)",
}
`;

exports[`Color Parser RGBA produces parse errors for wrongly typed rgba alpha value 1`] = `
Object {
  "message": "The alpha value(fourth argument) in rgba() should be either a  number or a percentage",
  "token": "rgba(0%, 100%, 0%, abc)",
}
`;

exports[`Color Parser RGBA produces parse errors for wrongly typed rgba alpha value 2`] = `
Object {
  "message": "The alpha value(fourth argument) in rgba() should be either a  number or a percentage",
  "token": "rgba(0%, 100%, 0%, abc)",
}
`;

exports[`Color Parser RGBA produces parse errors for wrongly typed rgba channel values 1`] = `
Object {
  "message": "The red, green & blue channels of the color should be either all  numbers or all percentages.",
  "token": "rgba(0, 255%, 0)",
}
`;

exports[`Color Parser RGBA produces parse errors for wrongly typed rgba channel values 2`] = `
Object {
  "message": "The red, green & blue channels of the color should be either all  numbers or all percentages.",
  "token": "rgba(0%, 100, 0%)",
}
`;

exports[`Color Parser RGBA produces parse errors for wrongly typed rgba channel values 3`] = `
Object {
  "message": "The red, green & blue channels of the color should be either all  numbers or all percentages.",
  "token": "rgba(0, 255%, 0, 100%)",
}
`;

exports[`Color Parser RGBA produces parse errors for wrongly typed rgba channel values 4`] = `
Object {
  "message": "The red, green & blue channels of the color should be either all  numbers or all percentages.",
  "token": "rgba(0%, 100, 0%, 100%)",
}
`;

exports[`Color Parser RGBA produces parse errors for wrongly typed rgba channel values 5`] = `
Object {
  "message": "The red, green & blue channels of the color should be either all  numbers or all percentages.",
  "token": "rgba(0, 255%, 0, abc)",
}
`;

exports[`Color Parser RGBA produces parse errors for wrongly typed rgba channel values 6`] = `
Object {
  "message": "The red, green & blue channels of the color should be either all  numbers or all percentages.",
  "token": "rgba(0%, 100, 0%, abc)",
}
`;
